# machined-rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci-image.yml  ci.yml
ci/: Dockerfile
crates/apiserver/: Cargo.toml  build.rs
crates/apiserver/proto/: machine.proto
crates/apiserver/src/: lib.rs  mapping.rs  service.rs
crates/apiserver/tests/: grpc.rs
crates/block/: Cargo.toml
crates/block/src/: fake.rs  fsprobe.rs  lib.rs  sysfs.rs
crates/block/tests/: loopback.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  load.rs  provider.rs  runtime_svc.rs  types.rs
crates/controllers/: Cargo.toml
crates/controllers/src/: lib.rs
crates/controllers/src/block/: discovery.rs  mod.rs  mount.rs  provision.rs
crates/controllers/src/network/: address.rs  config_controller.rs  hostname.rs  link.rs  mod.rs  resolver.rs  route.rs
crates/controllers/src/runtime/: health.rs  mod.rs  pod.rs
crates/controllers/src/time/: mod.rs  sync.rs
crates/cri/: Cargo.toml  build.rs
crates/cri/proto/: runtime.proto
crates/cri/src/: fake.rs  grpc.rs  lib.rs
crates/cri/tests/: uds.rs
crates/imager/: Cargo.toml  artifacts.toml
crates/imager/assets/: 10-machined-bridge.conflist
crates/imager/src/: apk.rs  arch.rs  boot.rs  build.rs  cpio.rs  fetch.rs  image.rs  initramfs.rs  main.rs  manifest.rs  modules.rs  pki.rs  rpi.rs  sdboot.rs
crates/machinectl/: Cargo.toml
crates/machinectl/src/: main.rs
crates/machinectl/tests/: e2e.rs
crates/machined/: Cargo.toml
crates/machined/src/: bootloader.rs  emergency.rs  imageboot.rs  main.rs  pid1.rs  runtime_images.rs  upgrade.rs
crates/machined/tests/: block.rs  boot_harness.rs  mount.rs  network.rs  payload.rs  provision.rs  runtime.rs  time.rs
crates/netlink/: Cargo.toml
crates/netlink/src/: fake.rs  lib.rs  rtnetlink_backend.rs
crates/netlink/tests/: netns.rs
crates/pki/: Cargo.toml
crates/pki/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: fake.rs  lib.rs  linux.rs
crates/platform/tests/: loopback_mount.rs
crates/resources/: Cargo.toml
crates/resources/src/: block.rs  lib.rs  metadata.rs  network.rs  pod_status.rs  resource.rs  runtime_status.rs  time.rs  upgrade_status.rs
crates/runtime-core/: Cargo.toml
crates/runtime-core/src/: error.rs  lib.rs  owned.rs  runtime.rs  state.rs  watch.rs
crates/sequencer/: Cargo.toml
crates/sequencer/src/: boot.rs  lib.rs  shutdown.rs  task.rs
crates/supervisor/: Cargo.toml
crates/supervisor/src/: lib.rs  manager.rs  process.rs  readiness.rs  restart.rs  runner.rs  service.rs
crates/time/: Cargo.toml
crates/time/src/: fake.rs  lib.rs  real.rs  sntp.rs
crates/time/tests/: loopback_ntp.rs
docs/: raspberry-pi-3a-plus.md
docs/examples/: node-with-kubelet.yaml
docs/superpowers/plans/: 2026-06-10-machined-rs-m0-runtime-core.md  2026-06-10-machined-rs-m1-first-boot.md  2026-06-10-machined-rs-m2a1-owner-cascade.md  2026-06-11-machined-rs-m2a2a-netlink.md  2026-06-11-machined-rs-m2a2b-controllers.md  2026-06-11-machined-rs-m2b1-block-discovery.md  2026-06-11-machined-rs-m2b2a-provisioning.md  2026-06-11-machined-rs-m2b2b-mount.md  2026-06-11-machined-rs-m2c-time.md  2026-06-11-machined-rs-m3a1-pki-apiserver.md  2026-06-11-machined-rs-m3a2-machinectl.md  2026-06-11-machined-rs-m3c-actions.md  2026-06-11-machined-rs-m4a-runtime.md  2026-06-12-machined-rs-m4b-payload.md  2026-06-12-machined-rs-m5a-graceful.md  2026-06-12-machined-rs-m5b-reset.md  2026-06-12-machined-rs-m6-hardening.md  2026-06-12-machined-rs-m7a-imager-x86-boot.md  2026-06-13-machined-rs-m7b1-race-fix-backoff.md  2026-06-13-machined-rs-m7b2-runtime-on-metal.md  2026-06-13-machined-rs-m7c1-aarch64-generic.md  2026-06-14-machined-rs-m7c2-pi3aplus.md  2026-06-14-machined-rs-m8a-run-a-pod.md  2026-06-14-machined-rs-m8b-cni-bridge.md  2026-06-14-machined-rs-m9a-kexec-upgrade.md  2026-06-15-machined-rs-m9b1-disk-ab-upgrade.md  2026-06-16-machined-rs-pi-ab-upgrade.md
docs/superpowers/specs/: 2026-06-10-machined-rs-design.md  2026-06-10-machined-rs-m2a-network-design.md  2026-06-11-machined-rs-m2b1-block-discovery-design.md  2026-06-11-machined-rs-m2b2a-provisioning-design.md  2026-06-11-machined-rs-m2b2b-mount-design.md  2026-06-11-machined-rs-m2c-time-design.md  2026-06-11-machined-rs-m3a-mgmt-api-design.md  2026-06-11-machined-rs-m3c-actions-design.md  2026-06-11-machined-rs-m4a-runtime-design.md  2026-06-12-machined-rs-m4b-payload-design.md  2026-06-12-machined-rs-m5a-graceful-design.md  2026-06-12-machined-rs-m5b-reset-design.md  2026-06-12-machined-rs-m6-hardening-design.md  2026-06-12-machined-rs-m7-image-pipeline-design.md  2026-06-13-machined-rs-m7b-full-stack-design.md  2026-06-13-machined-rs-m7c-aarch64-pi-design.md  2026-06-14-machined-rs-m8-run-a-pod-design.md  2026-06-14-machined-rs-m8b-cni-bridge-design.md  2026-06-14-machined-rs-m9a-kexec-upgrade-design.md  2026-06-15-machined-rs-m9b1-disk-ab-upgrade-design.md  2026-06-16-machined-rs-pi-ab-upgrade-design.md
examples/: node-ci.yaml  node-pi.yaml
scripts/: boot-test-aarch64-mbr.sh  boot-test-aarch64-rpi.sh  boot-test-aarch64.sh  boot-test-x86_64.sh  build-kexec-kernel.sh  build-oci-images.sh  build-test-aarch64-rpi.sh
