[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/resources",
    "crates/runtime-core",
    "crates/platform",
    "crates/config",
    "crates/supervisor",
    "crates/sequencer",
    "crates/machined",
    "crates/netlink",
    "crates/controllers",
    "crates/block",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
nix = { version = "0.29", features = ["mount", "signal", "process", "hostname", "reboot"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rtnetlink = "0.14"
netlink-packet-route = "0.19"
futures = "0.3"
gpt = "3.1"

# internal crates
machined-common = { path = "crates/common" }
machined-resources = { path = "crates/resources" }
machined-runtime-core = { path = "crates/runtime-core" }

# internal crates (added in M1)
machined-platform = { path = "crates/platform" }
machined-config = { path = "crates/config" }
machined-supervisor = { path = "crates/supervisor" }
machined-sequencer = { path = "crates/sequencer" }
machined-netlink = { path = "crates/netlink" }
machined-controllers = { path = "crates/controllers" }
machined-block = { path = "crates/block" }
