[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/resources",
    "crates/runtime-core",
    "crates/platform",
    "crates/config",
    "crates/supervisor",
    "crates/sequencer",
    "crates/machined",
    "crates/netlink",
    "crates/controllers",
    "crates/block",
    "crates/time",
    "crates/pki",
    "crates/apiserver",
    "crates/machinectl",
    "crates/cri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
nix = { version = "0.29", features = ["mount", "signal", "process", "hostname", "reboot", "ioctl", "time"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rtnetlink = "0.14"
netlink-packet-route = "0.19"
futures = "0.3"
gpt = "3.1"
# rcgen 0.13.2: x509-parser feature is required for CertificateParams::from_ca_cert_pem
# (gated behind cfg(all(feature = "pem", feature = "x509-parser")); not a default feature).
rcgen = { version = "0.13", features = ["x509-parser"] }
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tonic-build = "0.12"
protoc-bin-vendored = "3"
tokio-stream = "0.1"
clap = { version = "4", features = ["derive"] }
# SPIKE adaptation: tower default features don't include `util` (service_fn);
# hyper-util has no default features and TokioIo is behind `tokio`.
tower = { version = "0.4", features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# internal crates
machined-common = { path = "crates/common" }
machined-resources = { path = "crates/resources" }
machined-runtime-core = { path = "crates/runtime-core" }

# internal crates (added in M1)
machined-platform = { path = "crates/platform" }
machined-config = { path = "crates/config" }
machined-supervisor = { path = "crates/supervisor" }
machined-sequencer = { path = "crates/sequencer" }
machined-netlink = { path = "crates/netlink" }
machined-controllers = { path = "crates/controllers" }
machined-block = { path = "crates/block" }
machined-time = { path = "crates/time" }
machined-pki = { path = "crates/pki" }
machined-apiserver = { path = "crates/apiserver" }
machined-cri = { path = "crates/cri" }
