[package]
name = "machined-block"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
machined-resources.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
gpt.workspace = true
nix = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
gpt.workspace = true
