[package]
name = "machined-imager"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "machined-imager"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ureq.workspace = true
sha2.workspace = true
hex.workspace = true
toml.workspace = true
serde.workspace = true
flate2.workspace = true
tar.workspace = true
gpt.workspace = true
fatfs.workspace = true
fscommon.workspace = true
machined-config.workspace = true
machined-pki.workspace = true
tempfile.workspace = true
