[package]
name = "machined"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "machined"
path = "src/main.rs"

[dependencies]
machined-apiserver.workspace = true
machined-pki.workspace = true
machined-block.workspace = true
machined-common.workspace = true
machined-config.workspace = true
machined-controllers.workspace = true
machined-cri.workspace = true
machined-netlink.workspace = true
machined-platform.workspace = true
machined-resources.workspace = true
machined-runtime-core.workspace = true
machined-sequencer.workspace = true
machined-supervisor.workspace = true
machined-time.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
ureq.workspace = true
sha2.workspace = true
hex.workspace = true
flate2.workspace = true
tar.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nix.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
# start_paused virtual time in the wait_for_state_mount tests; the workspace
# tokio's "full" feature set does NOT include "test-util".
tokio = { workspace = true, features = ["test-util"] }
