[package]
name = "machined-supervisor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
machined-common.workspace = true
machined-resources.workspace = true
machined-runtime-core.workspace = true
machined-config.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[target.'cfg(unix)'.dependencies]
nix.workspace = true
